# LocalWave

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: artist_image.rs  artist_parser.rs  canvas.rs  config.rs  db.rs  import_playlist.rs  lib.rs  lyrics.rs  m3u_parser.rs  main.rs  media_controls.rs  metadata.rs  musixmatch.rs  proto_canvas.rs  routes.rs  scanner.rs  spotify_api_helper.rs  spotify_auth.rs  state.rs  types.rs  watcher.rs
src/components/: AlbumArt.tsx  AlbumGrid.tsx  ArtistLinks.tsx  NowPlayingBar.tsx  NowPlayingPanel.tsx  NowPlayingPanelDrawer.tsx  Queue.tsx  SearchBar.tsx  Sidebar.tsx  TrackContextMenu.tsx  TrackList.tsx  TrackMetadataEditor.tsx  TrackRow.tsx  icons.tsx
src/hooks/: useLibrary.ts  usePlayer.ts
src/lib/: api.ts  format.ts
src/pages/: Album.tsx  Artist.tsx  Home.tsx  Library.tsx  Liked.tsx  Playlist.tsx  Search.tsx  Settings.tsx
src/store/: library.ts  player.ts  ui.ts
