[package]
name = "localwave"
version = "0.1.0"
description = "Local-first music player"
authors = ["LocalWave"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "localwave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# HTTP server (embedded backend)
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio metadata (replaces music-metadata + music-tag-native)
lofty = "0.22"

# File watching (replaces chokidar)
notify = "7"
notify-debouncer-full = "0.4"

# Filesystem walking
walkdir = "2"

# Misc
regex = "1"
once_cell = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
http = "1"
thiserror = "2"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
dirs = "5"
prost = "0.13"
hmac = "0.12"
sha1 = "0.10"

# OS media controls (Windows SMTC, macOS, Linux MPRIS)
souvlaki = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Com",
] }
raw-window-handle = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
incremental = false

# Optimize dependencies for speed even in dev builds
[profile.dev.package."*"]
opt-level = 2
